<?xml version="1.0" encoding="UTF-8"?>
<!-- 
   Copyright 2010-2012 Jake Basile

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
	<string
		name="app_name">Link Shrink Pro</string>
	<string
		name="commerror">There was a problem communicating with %1$s. Please check your network connection and try again.</string>
	<string
		name="urlerror">There was a problem with the URL. Please check the URL and try again.</string>
	<string
		name="copiedtoclip">%1$s short link copied to clipboard.</string>
	<string
		name="unknownerror">Error submitting URL to %1$s. Please try again later or check configuration.</string>
	<string
		name="badbitlyconfig">You did not set a bit.ly username and API key. Unable to shorten link.</string>
	<string
		name="description">a simple URL shortener accessed from the browser\'s \"Share Page\" menu.</string>
	<string
		name="bitlyinforemind">Be sure to set your bit.ly Username and API key.</string>
	<string
		name="prefs_serv_title">Shortening Service</string>
	<string
		name="prefs_serv_summ">Select which shortening service to use</string>
	<string
		name="prefs_bitlyconfig">bit.ly Configuration</string>
	<string
		name="prefs_bitly_name_title">bit.ly Username</string>
	<string
		name="prefs_bitly_name_summ">Your bit.ly Username</string>
	<string
		name="prefs_bitly_key_title">bit.ly API Key</string>
	<string
		name="prefs_bitly_key_summ">Your bit.ly API Key (Not Password!)</string>
	<string
		name="prefs_bitly_getkey_title">Get API Key</string>
	<string
		name="prefs_bitly_getkey_summ">Select to get your API Key from bit.ly Also available from bit.ly account page.</string>
	<string
		name="badconfig">Bad Configuration. Please reset user data for Link Shrink and try again.</string>
	<string
		name="shortening_title">Shortening Link</string>
	<string
		name="shortening_message">Shortening link with %1$s. Isn\'t this an entertaining screen?</string>
	<string
		name="share_short_url_via">Share Short URL Via:</string>
	<string
		name="link_shrink_reshare">Link Shrink + Share</string>
	<string
		name="link_shrink_copy">Link Shrink + Copy</string>
	<string
		name="link_already_shortened_share">This link is already shortened, select another share recipient.</string>
	<string
		name="link_already_shortened_copy">This link is already shortened, it has been copied to your clipboard.</string>
	<string
		name="bad_input_toast">"Link Shrink couldn't shorten that. Try again with a URL."</string>
</resources>
